--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ picture: assets/images/profile.jpg
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: https://google.com/?q=my+resume
+resume-url: https://bit.ly/cvfyfirman0
 
-url: https://koppl.in/indigo
+url: http://fyfirman.github.io
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
@@ -30,7 +30,7 @@ permalink: /:title/
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
-  shortname: mydisqus # enter this from your disqus account
+  shortname: fyfirman # enter this from your disqus account
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
@@ -39,7 +39,7 @@ twitter: fyfirman
 # google: mygoogle
 instagram: fyfirman
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: fyfirman
 # youtube: myyoutube
 # spotify: myspotify
 github: fyfirman
@@ -86,11 +86,11 @@ width: large
 projects: true
 
 # if you don't need "about" or "blog", comment them out below
-about: true
+about: false
 blog: true
 
 # do you want to show the "read time" of the posts?
-read-time: true
+read-time: false
 
 # do you want to show the "tags" inside the posts?
 show-tags: true
