--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Firmansyah Yanuar
-bio: Software Engineer | Front End Developer | UI/UX Designer
+bio: Software Engineer | Front-End Developer | UI/UX Designer
 
 # twitter summary info
 description: A blog about technology and stuff related
