--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ email: fyfirman@gmail.com
 authors:
     fyfirman:
         name: Firmansyah Yanuar
-        bio: Software Engineer | Front End Developer | UI/UX Designer
+        bio: Software Engineer | Front-End Developer | UI/UX Designer
         external-image: false
         picture: assets/images/profile.jpg
         twitter: fyfirman
