--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
-resume-external: true
-resume-url: https://bit.ly/cvfyfirman0
+cv: true
+cv-external: true
+cv-url: https://bit.ly/cvfyfirman0
 
 url: http://fyfirman.github.io
 # your url: http://USERNAME.github.io
@@ -84,6 +84,9 @@ width: large
 
 # if you don't need projects, comment the *projects* configs below
 projects: true
+
+# impression web by fyfirman
+impression: true
 
 # if you don't need "about" or "blog", comment them out below
 about: false
